# flaco

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  mem_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test.py
.cargo/: config.toml
.github/workflows/: CI.yml
benchmarks/: README.md  test_benchmarks.py
examples/: memory_profile.rs
flaco/: __init__.py  flaco.h  includes.pxd  io.pyx  pandas.py
src/: lib.rs
tests/: conftest.py  test_general.py
